argocd/templates/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ui
  namespace: argocd
  annotations:
    # Use websecure entrypoint (HTTPS)
    #traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # Let Traefik terminate TLS using default certificate
    # No need to specify TLS secret here
    #traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  ingressClassName: traefik
  # tls:
  #   - hosts:
  #       - argocd-mngmt.homelab.com
      #secretName: wildcard-local-tls
  rules:
    - host: argocd-mngmt.homelab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
